--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,9 +17,9 @@
          >{{x}}</mat-grid-tile>
     </mat-grid-list>
 </mat-card>
-<mat-card *ngIf="won">
+<!-- <mat-card *ngIf="won">
   You won!
-</mat-card>
+</mat-card> -->
 </div>
 
 
