--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,11 @@
 
 <div class="title" role="banner">
   <!-- <h1>Dialexa Pride Month</h1> -->
-  <img src="assets/pride_banner.jpg" alt="image">
+  <img src="assets/Instagram-1.jpg" alt="image">
+  <mat-card>
+    <h4>Use drop down menu to select the type of game</h4>
+    <h4>The allowed winning formations are the following:</h4>
+  </mat-card>
 </div>
 
 <div class="content" role="main">
@@ -17,9 +21,6 @@
          >{{x}}</mat-grid-tile>
     </mat-grid-list>
 </mat-card>
-<!-- <mat-card *ngIf="won">
-  You won!
-</mat-card> -->
 </div>
 
 
