Correct spelling in data, remove dupes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,7 @@
       <mat-label>Game Modes</mat-label>
       <mat-select [(ngModel)]="selectedGame" name="gameType" (ngModelChange)="selectGameMode(selectedGame)" multiple>
         <mat-option
+        class="options"
         *ngFor="let name of gameModes"
         [value]="name">{{name}}</mat-option>
       </mat-select>
